feat: creature cards

--- a/src/app/pages/collection-search-page/collection-search-page.component.html
+++ b/src/app/pages/collection-search-page/collection-search-page.component.html
@@ -36,3 +36,9 @@
         {{emptyList}}
     </div>
 </div>
+
+<div *ngIf="loading" class="loading-spinner"></div>
+
+<div *ngIf="error" class="error-message">
+    {{ error }}
+</div>
