refactor: home image

--- a/src/app/pages/collection-search-page/collection-search-page.component.html
+++ b/src/app/pages/collection-search-page/collection-search-page.component.html
@@ -6,7 +6,7 @@
         <app-collection-filters (collection)="handleCollection($event)"></app-collection-filters>
     </section>
 
-    <img src="../../assets/home-image.webp" alt="Magic Cards">
+    <img src="assets/home-image.webp" alt="Magic Cards">
 
     @if(collectionItems.length !== 0){
         <section class="wrapper-cards">
