--- a/src/app/pages/card-display-page/card-display-page.component.scss
+++ b/src/app/pages/card-display-page/card-display-page.component.scss
@@ -26,10 +26,9 @@
         justify-content: center;
         padding: 20px;
 
-
         .card {
             width: 300px;
-            min-height: 300px;
+            height: 380px;
             box-sizing: border-box;
             padding: 10px;
             border: 1px solid $white;
@@ -38,14 +37,41 @@
             border-radius: 12px;
             transition: transform 0.2s ease;
             display: flex;
-            justify-content: space-around;
+            flex-direction: column;
+            justify-content: space-between;
             align-items: center;
-            gap: 5px;
-
+            gap: 8px;
 
             img {
                 width: 150px;
-                height: 150px;
+                height: 200px;
+                object-fit: cover;
+            }
+
+            div {
+                flex-grow: 1;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+            }
+
+            strong {
+                margin-bottom: 10px;
+            }
+
+            span, p {
+                margin: 5px 0;
+                font-size: 14px;
+            }
+
+            p {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 6;
+                -webkit-box-orient: vertical;
             }
 
             &:hover {
@@ -53,7 +79,6 @@
                 z-index: 1;
             }
         }
-
     }
 
     @keyframes fadeIn {
